--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
-    "vue": "^2.0.1"
+    "less-loader": "^2.2.3",
+    "lodash": "^4.17.2",
+    "store": "^1.3.20",
+    "vue": "^2.0.1",
+    "vue-awesome-swiper": "^2.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
@@ -53,6 +57,8 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.7.0",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "lolex": "^1.4.0",
     "mocha": "^3.1.0",
     "opn": "^4.0.2",
