--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lodash": "^4.17.2",
     "store": "^1.3.20",
     "vue": "^2.0.1",
-    "vue-awesome-swiper": "^2.2.3"
+    "vue-awesome-swiper": "^2.2.3",
+    "vue-resource": "^1.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
